[gd_scene load_steps=5 format=3 uid="uid://bpb0g8633uyyb"]

[ext_resource type="Script" uid="uid://bkypo6kcjppfg" path="res://scripts/pause_menu.gd" id="1_n87rw"]
[ext_resource type="AudioStream" uid="uid://cj2i5ph7025d2" path="res://sfx/05-pause.mp3" id="2_myx47"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n87rw"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 4
border_width_top = 4
border_width_bottom = 2
border_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_myx47"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 38
border_width_top = 38
border_color = Color(0, 0, 0, 1)

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n87rw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -24.0
offset_right = 32.0
offset_bottom = 32.0
color = Color(0.0885599, 0.0885599, 0.0885599, 0.741)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -287.0
offset_top = -248.0
offset_right = 287.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30
alignment = 1

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_focus_color = Color(0.258824, 0.25098, 1, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_n87rw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_n87rw")
theme_override_styles/normal = SubResource("StyleBoxFlat_n87rw")
text = "CONTINUAR"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_focus_color = Color(0.258824, 0.25098, 1, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_n87rw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_n87rw")
theme_override_styles/normal = SubResource("StyleBoxFlat_n87rw")
text = "SAIR"

[node name="PauseTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -750.0
offset_top = -388.0
offset_right = 750.0
offset_bottom = -87.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 300
theme_override_styles/normal = SubResource("StyleBoxFlat_myx47")
text = "PAUSE"

[node name="PauseSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_myx47")

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
